# smrtclcltr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO  bld.sh  build-all.sh  calculator.cpp  calculator.hpp  checked_float.hpp  checked_int.hpp  constants.cpp  debug.cpp  debug.hpp  function.hpp  function_library.hpp  functions.hpp  git-show-version.sh  input.cpp  input.hpp  list.hpp  main.cpp  main.hpp  main_cli.cpp  matrix.hpp  meson.build  meson_options.txt  numeric.cpp  numeric.hpp  numeric_basic_types.hpp  numeric_boost_types.hpp  numeric_format.hpp  parser.cpp  parser.hpp  print.hpp  rational.hpp  stack_entry.cpp  stack_entry.hpp  std_container_format.hpp  (+8 more)
.github/workflows/: main.yml
functions/: arithmetic_funcs.cpp  bitwise_funcs.cpp  common.hpp  compound.cpp  factorial.cpp  float.cpp  fn_template.cpp  hyp_trig_funcs.cpp  integer.cpp  log.cpp  matrix.cpp  mode_funcs.cpp  modular_funcs.cpp  probability.cpp  product.cpp  program.cpp  range.cpp  sign.cpp  sqr.cpp  sqrt.cpp  stack_funcs.cpp  sum.cpp  time_funcs.cpp  trig_funcs.cpp  unit_funcs.cpp  util_funcs.cpp
src/: calculator.cpp  calculator.hpp  checked_float.hpp  checked_int.hpp  config.cpp  config.hpp  ctrl_statements.cpp  ctrl_statements.hpp  debug.hpp  exception.hpp  function.hpp  function_library.cpp  function_library.hpp  input.cpp  input.hpp  list.hpp  main.hpp  main_cli.cpp  matrix.hpp  meson.build  numeric.cpp  numeric.hpp  numeric_basic_types.hpp  numeric_boost_types.hpp  numeric_format.hpp  parser.cpp  parser.hpp  parser_main.cpp  parser_parts.hpp  print.hpp  program.cpp  program.hpp  rational.hpp  stack_entry.cpp  stack_entry.hpp  statement.hpp  std_container_format.hpp  symbolic.cpp  symbolic.hpp  time.hpp  (+6 more)
src/functions/: arithmetic_funcs.cpp  bitwise_funcs.cpp  boolean_funcs.cpp  common.hpp  compound.cpp  factorial.cpp  float.cpp  fn_template.cpp  hyp_trig_funcs.cpp  integer.cpp  log.cpp  matrix.cpp  mode_funcs.cpp  money_funcs.cpp  probability.cpp  program.cpp  range.cpp  sign.cpp  sqr.cpp  sqrt.cpp  stack_funcs.cpp  sum.cpp  symbolic_funcs.cpp  time_funcs.cpp  trig_funcs.cpp  unit_funcs.cpp  variables.cpp
